// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarStyled should render the component with default size 1`] = `
<StyledComponent
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "AvatarStyled-sc-4yjh1x-0",
        "isStatic": false,
        "rules": Array [
          "background:url(",
          [Function],
          ") no-repeat center center;background-size:cover;border-radius:99%;",
          [Function],
          ";",
        ],
      },
      "displayName": "AvatarStyled",
      "render": [Function],
      "styledComponentId": "AvatarStyled-sc-4yjh1x-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  size="md"
/>
`;

exports[`AvatarStyled should render the component with large size 1`] = `
<StyledComponent
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "AvatarStyled-sc-4yjh1x-0",
        "isStatic": false,
        "rules": Array [
          "background:url(",
          [Function],
          ") no-repeat center center;background-size:cover;border-radius:99%;",
          [Function],
          ";",
        ],
      },
      "displayName": "AvatarStyled",
      "render": [Function],
      "styledComponentId": "AvatarStyled-sc-4yjh1x-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  size="lg"
/>
`;

exports[`AvatarStyled should render the component with small size 1`] = `
<StyledComponent
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "AvatarStyled-sc-4yjh1x-0",
        "isStatic": false,
        "rules": Array [
          "background:url(",
          [Function],
          ") no-repeat center center;background-size:cover;border-radius:99%;",
          [Function],
          ";",
        ],
      },
      "displayName": "AvatarStyled",
      "render": [Function],
      "styledComponentId": "AvatarStyled-sc-4yjh1x-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  size="sm"
/>
`;
